<resources>
    <string name="send_to_mail">НАПИСАТЬ НА ПОЧТУ</string>
    <string name="share_app">ПОДЕЛИСЬ С ДРУГОМ</string>
    <string name="like">ОЦЕНИТЬ</string>
    <string name="settings">НАСТРОЙКИ</string>
    <string name="ic_ohm">ic_ohm</string>
    <string name="ic_kirchhoff">ic_kirchhoff</string>
    <string name="ic_joule">ic_joule</string>
    <string name="ic_laws_right">ic_laws_right</string>
    <string name="laws_title_ohm">Закон Ома</string>
    <string name="laws_title_kirchhoff">1 и 2 правило Кирхгофа</string>
    <string name="laws_title_joule">Закон Джоуля-Ленца</string>
    <string name="ic_coulomb">ic_coulomb</string>
    <string name="laws_title_coulomb">Закон Кулона</string>
    <string name="laws_title_right">Правила правой руки</string>
    <string name="laws_title_left">Правила левой руки</string>
    <string name="ic_laws_left">ic_laws_left</string>
    <string name="info_connection_resistors">\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t<b>Соединение ресисторов</b></string>
    <string name="info_connection_capacitor">\t\t\t\t\t\t\t\t\t\t\t\t\t\t<b>Соединение конденсаторов</b></string>
    <string name="ic_connection">ic_connection</string>
    <string name="ic_potential_control_system">ic_potential_control_system</string>
    <string name="info_title_potential_control_system">Система управления потенциалов</string>
    <string name="info_description_potential_control_system">Современные многоквартирные дома оборудованы различными инженерными системами и многочисленными бытовыми приборами, металлические элементы которых служат проводниками электрического тока и обладают своим потенциалом. При нормальной эксплуатации потенциал близок к нулю и не отличается от потенциала поверхности и других окружающих предметов. При аварии, например повреждении изоляции или заносе потенциала по трубам, потенциал проводящих частей может повышаться до нескольких сотен вольт. При одновременном прикосновении человека к двум предметам с разными потенциалами, возникает опасность поражения его электрическим током. Причиной возникновения напряжения на металлических токопроводящих частях может быть не только поврежденная изоляция, но и статическое электричество, а так же блуждающие токи систем заземления. В случае протекания через заземляющее устройство электрического тока, оно так же оказывается под напряжением и не гарантирует достаточный уровень безопасности.
Надёжную защиту обеспечивает система уравнивания потенциалов (СУП), организованная по принципу электрического соединения всех доступных для прикосновения токопроводящих частей здания с нулевым защитным проводником РЕ. В данном случае, потенциально опасные металлические элементы будут иметь одинаковый потенциал, что снижает вероятность удара током, при одновременном прикосновении к ним.</string>
    <string name="info_title_potential_control_system_1">Нормирование системы уравнивания потенциалов</string>
    <string name="info_description_potential_control_system_1">Согласно п. 1.7.32 ПУЭ, под защитным уравниванием потенциалов понимают электрическое соединение проводящих частей для достижения равенства их потенциалов, выполняемое в целях электробезопасности.
\nСистему уравнивания потенциалов (СУП) используют для устранения разности напряжений всех проводящих элементов и конструкций здания, а так же относящихся к нему инженерных сетей и коммуникаций между собой и заземляющим устройством, путем их объединения в единый контур с использованием защитных проводников.
\nЗащитные проводники могут находиться в составе линий электроснабжения здания или прокладываться отдельно. Подключение каждого токопроводящего элемента необходимо выполнять отдельным проводом, с помощью болтовых соединений, зажимов или сварки, с обязательным соблюдением условий доступности для осмотра и проведения испытаний, а так же защиты от механических повреждений и коррозии. Соединения не должны выполняться пайкой.
\nВ составе СУП отдельного здания различают основную и дополнительную системы уравнивания потенциалов. Правила по их выполнению определены в следующих нормативных документах:
\n\n\t1. Стандарт МЭК 364-4-41; ГОСТ 13109-97 Электрическая энергия. Совместимость технических средств электромагнитная. Нормы качества электрической энергии в системах электроснабжения общего назначения;
\n\t2. ГОСТ Р. 50571.1-93 Электроустановки зданий. Основные положения;  \n\t3. ГОСТ Р. 50571.2-94 Электроустановки зданий. Основные характеристики; \n\t4. Правила устройства электроустановок (ПУЭ 7-го издания).</string>
    <string name="info_title_potential_control_system_2">Основная система уравнивания потенциалов</string>
    <string name="info_description_potential_control_system_2">Основная система уравнивания потенциалов (ОСУП) объединяет все крупные токопроводящие части здания, в обычном состоянии не имеющие электрического потенциала, в единый контур с главной заземляющей шиной. Рассмотрим графический пример выполнения СУП в электроустановке жилого дома.</string>
    <string name="info_title_potential_control_system_3">Система уравнивания потенциалов в жилом доме</string>
    <string name="info_description_potential_control_system_3">Согласно приведенной схеме ОСУП состоит из следующих элементов:
    \n\n\t<b>.</b> контура заземления (заземляющего устройства); \n\t<b>.</b> лавной заземляющей шины (ГЗШ); \n\t<b>.</b> нулевых защитных проводников;\n\t<b>.</b> проводников уравнивания потенциалов.
    \n\nПеречень проводящих частей в электроустановках до 1 кВ, подлежащих соединению в ОСУП, определен в п. 1.7.82 ПУЭ. Главную заземляющую шину можно установить внутри вводно-распределительного устройства или обособленно, при соблюдении следующих условий: расположение неподалеку от защищаемого объекта, обеспечение доступа для ее обслуживания и обязательной защиты от возможного прикосновения.
\nВнутри вводно-распределительного устройства в качестве ГЗШ используют шину нулевого защитного проводника РЕ, что обеспечивает не только подключение защитного нуля питающей входящей линии с нулевыми проводниками распределительной сети здания, но и выполняет функцию присоединения отдельных проводящих частей и заземляющих устройств. Отдельно расположенная шина соединяет только входящие в ОСУП токопроводящие конструкции и заземлители. Площадь сечения такой ГЗШ должна быть не менее площади сечения нулевого защитного проводника питающей входящей линии.
\nГлавную заземляющую шину изготавливают из меди, возможно применение стали.
\nК ней подключают контур заземления и нулевые защитные проводники (PEN или PE в зависимости от выбранной системы заземления). Металлические части и конструкции здания, а так же относящиеся к нему коммуникации и систему вентиляции монтируют к ГЗШ по радиальной схеме, выполняя соединения каждого токопроводящего элемента отдельным проводником уравнивания потенциалов, с возможностью отключения любого из них.
\nТокопроводящие части коммуникаций, входящие в здание извне, необходимо присоединять к ГЗШ как можно ближе к точке их ввода. К соединительным проводникам ОСУП предъявляют повышенные требования, главным из которых является их непрерывность. Поэтому установка в цепях различных коммутационные аппаратов строго запрещена. Проводники имеют жёлто-зеленую окраску с обязательным наличием бирки с наименованием присоединяемого элемента. Закрепляют их на шине болтовыми соединениями, к проводящим конструкциям крепят так же при помощи сварки, для труб коммуникаций используют хомуты.
\nСечение проводников уравнивания потенциалов должно быть не менее: 6 мм2 - для медных, 16 мм2 – для алюминиевых и 50 мм2 – для стальных. см. п. 1.7.137 ПУЭ. </string>
    <string name="info_title_potential_control_system_4">Дополнительная система уравнивания потенциалов</string>
    <string name="info_description_potential_control_system_4">В зонах повышенной опасности поражения людей электрическим током, таких как, ванная, сауна, кухня или душевая, следует выполнять дополнительную систему уравнивания потенциалов (ДСУП), для обеспечения достаточного уровня электробезопасности в случае возникновения аварийной ситуации. Система дополнительного уравнивания потенциалов соединяет между собой все одновременно доступные для прикосновения открытые и сторонние проводящие части, нулевые и заземляющие защитные проводники всего оборудования (в зависимости от типа системы), включая защитные проводники штепсельных розеток. см. п. 1.7.83 ПУЭ. Схема соединений ДСУП изображена на рисунке ниже.</string>
    <string name="info_title_potential_control_system_5">Система уравнивания потенциалов в ванной комнате</string>
    <string name="info_description_potential_control_system_5">Как видно из схемы, все потенциально опасные проводящие конструкции подсоединяют к клеммной коробке (шине) в коробке уравнивания потенциалов, что позволяет организовать ДСУП, не протягивая защитные проводники от каждого элемента к распределительному щитку квартиры (дома).
\nИзготавливают шину ДСУП из меди сечением не менее 10 мм2, подключая к ней шесть разъемов и более.\nКУП соединяют с шиной заземления вводного распределительного щитка с использованием медного защитного PE-проводника сечением 6 мм2, заземляя таким образом все металлические части помещения. Обязательному подключению к ДСУП подлежат и выходящие за пределы помещений сторонние проводящие элементы.
\nВ домах нового жилого фонда проводники СУП прокладываются на этапе строительства, совместно с монтажом электропроводки. В случае их отсутствия, по каким либо причинам, проводники возможно уложить самостоятельно, прорезав для этого в стяжке пола узкие канавки. Перед началом работ необходимо убедится, что в полу нет других коммуникаций. Проводники соединяют с заземляемыми объектами болтовыми соединениями, хомутами или привариванием контактных лепестков, что обеспечивает наличие прочной металлической связи между ними.
\nДСУП выполняют с использованием специально предусмотренных проводников или применяют открытые и сторонние токопроводящие элементы, соответствующие требованиям п. 1.7.122 ПУЭ к защитным проводникам. см п. 1.7.83 ПУЭ. При условии отсутствия механического воздействия, требуемое сечение для проводников составляет 2,5 мм2и более. При возможном механическом воздействии используют проводники сечением 4 мм2 и более. Соединение двух открытых проводящих элементов выполняют проводником сечением не менее сечения меньшего из подключенных к ним защитных проводников. Сечение проводников ДСУП, соединяющих открытую и стороннюю проводящие части, должно быть не меньше половины сечения защитного проводника, подключенного к открытой проводящей части. см. п. 1.7.138 ПУЭ.</string>
    <string name="info_title_potential_control_system_6">Ограничения при уравнивании потенциалов</string>
    <string name="info_description_potential_control_system_6">Монтаж СУП выполняют еще на этапе строительства здания. Однако существует ограничение по ее применению в уже имеющихся постройках. В домах с системой заземления TN-C, с объединенным PEN-проводником, выполнять дополнительное уравнивание потенциалов категорически запрещено. В противном случае, при обрыве нулевого провода, возникает опасность поражения электрическим током остальных жильцов, не сделавших ДСУП. Как правило, это ограничение касается многоэтажных зданий старого жилого фонда.
\nПроблема решается при возможности перехода на систему заземления TN-C-S: для чего на ГЗШ в вводно-распределительном устройстве здания PEN-проводник разделяют на PE и N проводники, выполняют контур заземления и соединяют его с главной заземляющей шиной медным проводом. Существующая в настоящее время тенденция проводить коммуникации (водопровод и канализацию) пластиковыми трубами, не требует объединение их в систему уравнивания потенциалов. Замена в уже имеющейся ДСУП металлических труб на токонепроводящие пластиковые, приводит к нарушению электрической связи с заземляющей шиной всех остальных металлических элементов помещения (батарей, полотенцесушителей и пр.), делая их потенциально опасными для человека в случае одновременного прикосновения.</string>
</resources>