<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_send_to_mail"
        android:icon="@drawable/ic_baseline_email"
        android:orderInCategory="1"
        android:title="@string/send_to_mail"
       app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_share_app"
        android:icon="@drawable/ic_baseline_share"
        android:orderInCategory="2"
        android:title="@string/share_app"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_like"
        android:orderInCategory="3"
        android:title="@string/like"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="never" />
</menu>