<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:id="@+id/info_title_potential_control_system"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/info_title_potential_control_system"
        android:textSize="16sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/info_description_potential_control_system"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/info_description_potential_control_system"
        android:textSize="16sp" />
        <TextView
            android:id="@+id/info_title_potential_control_system_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/info_title_potential_control_system_1"
            android:textSize="16sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/info_description_potential_control_system_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/info_description_potential_control_system_1"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/info_title_potential_control_system_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/info_title_potential_control_system_2"
            android:textSize="16sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/info_description_potential_control_system_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/info_description_potential_control_system_2"
            android:textSize="16sp" />
        <ImageView
            android:id="@+id/info_ic_potential_control_system"
            android:layout_width="wrap_content"
            android:layout_height="240dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="8dp"
            android:src="@drawable/ic_info_earthing_potential_control_system"
            android:contentDescription="@string/ic_potential_control_system" />
        <ImageView
            android:id="@+id/info_ic_potential_control_system_1"
            android:layout_width="wrap_content"
            android:layout_height="240dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="8dp"
            android:src="@drawable/ic_info_earthing_potential_control_system_1"
            android:contentDescription="@string/ic_potential_control_system" />
        <TextView
            android:id="@+id/info_title_potential_control_system_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="8dp"
            android:gravity="center_horizontal"
            android:text="@string/info_title_potential_control_system_3"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/info_description_potential_control_system_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/info_description_potential_control_system_3"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/info_title_potential_control_system_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/info_title_potential_control_system_4"
            android:textSize="16sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/info_description_potential_control_system_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/info_description_potential_control_system_4"
            android:textSize="16sp" />
        <ImageView
            android:id="@+id/info_ic_potential_control_system_2"
            android:layout_width="wrap_content"
            android:layout_height="240dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="8dp"
            android:src="@drawable/ic_info_earthing_potential_control_system_2"
            android:contentDescription="@string/ic_potential_control_system" />
        <TextView
            android:id="@+id/info_title_potential_control_system_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="8dp"
            android:gravity="center_horizontal"
            android:text="@string/info_title_potential_control_system_5"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/info_description_potential_control_system_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/info_description_potential_control_system_5"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/info_title_potential_control_system_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/info_title_potential_control_system_6"
            android:textSize="16sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/info_description_potential_control_system_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/info_description_potential_control_system_6"
            android:textSize="16sp" />

    </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>